--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <center>
         <div class="card2 p-3 text-center" data-aos="zoom-in" >
             <h4 class="fw-bold fs-3">WINTER IS HERE!</h4>
-            <p class="text-light fs-3 fst-italic">Winter time is the best time to prune trees, and here's why.</p><br>
+            <p class="text-light fs-3 fst-italic">Winter time is the best time to prune trees, and here's why...</p><br>
             <!-- <p class="para para-light py-3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Natus tempore accusamus quis magnam doloremque itaque ad modi, pariatur iste labore similique officiis impedit aspernatur aperiam facere architecto. Eligendi, repellendus inventore!</p> -->
             <div class="d-flex align-items-center">
                 <!-- <p class="pe-2 text-light"><i class="far fa-check-circle fa-1x"></i></p> -->
@@ -133,7 +133,7 @@
             <div class="row d-flex align-items-center">
                 <div class="col-lg-7" data-aos="fade-right">
                     <p>ABOUT US</p>
-                    <h2 class="fs-1">We care for your trees <br> as if their our own</h2>
+                    <h2 class="fs-1">We care for your trees <br> as if they are our own</h2>
                     <p class="py-2 para-light"> Our goal at Tree of Life Professional Tree Care is to properly prune your trees to ISA and ANZI 700 standards. We will make sure the work we do will promote the growth, health, and overall well being of your trees, and protect your property and loved ones.</p>
                     <p class="py-2 para-light"> We offer tree cabling, bracing, and removal services when necessary. Tree of Life Professional Tree care will plant 2 trees for every tree removed. Saplings will be donated to local schools to promote environmental awareness and a world our children will be proud of.</p>
 
@@ -201,7 +201,7 @@
                 <div class="col-lg-4">
                     <div class="card bg-transparent">
                         <i class="fas fa-check fa-2x"></i>
-                        <h4 class="py-2">FRUIT TREE PRUNNING</h4>
+                        <h4 class="py-2">FRUIT TREE PRUNING</h4>
                         <p class="para-light">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magnam odit consequatur doloribus natus in suscipit!</p>
                     </div>                    
                 </div>
@@ -272,7 +272,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3 d-flex align-items-center" >
-                    <div class="p-2"><i class="fas fa-mobile-alt fa-2x"></i></div>
+                    <div class="p-2"><i class="far fa-mobile-alt fa-2x"></i></div>
                     <div class="ms-2">
                         <h6>CALL FOR A FREE ESTIMATE</h6>
                         <p>(720) 470-1643</p>
