--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                     </div>                    
                 </div>
             </div> <!-- end of row -->
-            <center><p class="py-2 fs-5">We offer services in North northwestern Denver Colorado area. <br>
+            <center><p class="py-2 fs-5 pb-5">We offer services in North Northwestern Denver Colorado area. <br>
                 We are out of Broomfield Colorado zip 80234 and will operate in a 30 mile radius.</p>
             </center>
         </div> <!-- end of container -->
@@ -272,7 +272,7 @@
                     </div>
                 </div>
                 <div class="col-lg-3 d-flex align-items-center" >
-                    <div class="p-2"><i class="far fa-mobile-alt fa-2x"></i></div>
+                    <div class="p-2"><i class="fas fa-mobile-alt fa-2x"></i></div>
                     <div class="ms-2">
                         <h6>CALL FOR A FREE ESTIMATE</h6>
                         <p>(720) 470-1643</p>
