--- a/index.html
+++ b/index.html
@@ -154,9 +154,9 @@
 
 
     <!-- Services -->
-    <section class="services d-flex align-items-center py-5" id="services">
+    <section class="services d-flex align-items-center py-5 pb-5" id="services">
         <div class="container text-light">
-            <div class="text-center mt-5" >
+            <div class="text-center mt-5">
                 <p>OUR SERVICES</p> 
                 <h2 class="py-2">Our Professional Services are  </h2>
                
